# app/router.go
@@ -15,27 +15,27 @@ func NewRouter(timKerjaController controller.TimKerjaController, susunanTimContr
 	e.Use(middleware.Recover())
 	e.Use(middleware.CORS())
 
-	e.GET("/swagger/*", echoSwagger.WrapHandler)
+	e.GET("/api/v1/timkerja/swagger/*", echoSwagger.WrapHandler)
 	e.GET("/api/v1/timkerja/swagger/doc.json", echoSwagger.WrapHandler)
 
-	e.POST("/timkerja", timKerjaController.Create)
-	e.PUT("/timkerja/:id", timKerjaController.Update)
-	e.DELETE("/timkerja/:id", timKerjaController.Delete)
-	e.GET("/timkerja/:id", timKerjaController.FindById)
-	e.GET("/only_timkerja", timKerjaController.FindAll)
-	e.GET("/timkerja", timKerjaController.FindAllTm)
+	e.POST("/api/v1/timkerja/timkerja", timKerjaController.Create)
+	e.PUT("/api/v1/timkerja/timkerja/:id", timKerjaController.Update)
+	e.DELETE("/api/v1/timkerja/timkerja/:id", timKerjaController.Delete)
+	e.GET("/api/v1/timkerja/timkerja/:id", timKerjaController.FindById)
+	e.GET("/api/v1/timkerja/only_timkerja", timKerjaController.FindAll)
+	e.GET("/api/v1/timkerja/timkerja", timKerjaController.FindAllTm)
 
-	e.POST("/susunantim", susunanTimController.Create)
-	e.PUT("/susunantim/:id", susunanTimController.Update)
-	e.DELETE("/susunantim/:id", susunanTimController.Delete)
-	e.GET("/susunantim/:id", susunanTimController.FindById)
-	e.GET("/susunantim", susunanTimController.FindAll)
+	e.POST("/api/v1/timkerja/susunantim", susunanTimController.Create)
+	e.PUT("/api/v1/timkerja/susunantim/:id", susunanTimController.Update)
+	e.DELETE("/api/v1/timkerja/susunantim/:id", susunanTimController.Delete)
+	e.GET("/api/v1/timkerja/susunantim/:id", susunanTimController.FindById)
+	e.GET("/api/v1/timkerja/susunantim", susunanTimController.FindAll)
 
-	e.POST("/jabatantim", jabatanTimController.Create)
-	e.PUT("/jabatantim/:id", jabatanTimController.Update)
-	e.DELETE("/jabatantim/:id", jabatanTimController.Delete)
-	e.GET("/jabatantim/:id", jabatanTimController.FindById)
-	e.GET("/jabatantim", jabatanTimController.FindAll)
+	e.POST("/api/v1/timkerja/jabatantim", jabatanTimController.Create)
+	e.PUT("/api/v1/timkerja/jabatantim/:id", jabatanTimController.Update)
+	e.DELETE("/api/v1/timkerja/jabatantim/:id", jabatanTimController.Delete)
+	e.GET("/api/v1/timkerja/jabatantim/:id", jabatanTimController.FindById)
+	e.GET("/api/v1/timkerja/jabatantim", jabatanTimController.FindAll)
 
 	return e
 }
